# Edge-AI

SenseForge - A modular Edge AI and Data Science toolkit/: CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
SenseForge - A modular Edge AI and Data Science toolkit/configs/: default.yaml
SenseForge - A modular Edge AI and Data Science toolkit/data/: sample_vibration.csv
SenseForge - A modular Edge AI and Data Science toolkit/scripts/: run_eda.sh  run_pipeline.sh  setup.sh
SenseForge - A modular Edge AI and Data Science toolkit/src/c/: dsp.c  dsp.h
SenseForge - A modular Edge AI and Data Science toolkit/src/py/sensorkit/: __init__.py  cli.py  features.py  io.py  pipeline.py
SenseForge - A modular Edge AI and Data Science toolkit/tests/c/: test_dsp.c
SenseForge - A modular Edge AI and Data Science toolkit/tests/py/: test_basic.py
