cmake_minimum_required(VERSION 3.20)
project(sensor_toolkit C)
enable_testing()
add_library(dsp STATIC src/c/dsp.c)
target_include_directories(dsp PUBLIC ${CMAKE_SOURCE_DIR}/src/c)
add_library(dsp_shared SHARED src/c/dsp.c)
set_target_properties(dsp_shared PROPERTIES OUTPUT_NAME "dsp")
target_include_directories(dsp_shared PUBLIC ${CMAKE_SOURCE_DIR}/src/c)
add_executable(test_dsp tests/c/test_dsp.c)
target_link_libraries(test_dsp PRIVATE dsp m)
add_test(NAME dsp_suite COMMAND test_dsp)
